# divergence_strategy_v1

./: .gitignore  AlexTest.cpp  BigBarScalping.cpp  Bouncing.cpp  CMakeLists.txt  ClusterImbalance.cpp  DebugAutoTrading.cpp  DeltaVol.cpp  DeltaVolumeMomentumAlex.cpp  DeltaVolumeMomentumAlexTrading.cpp  ECZoneTrader.cpp  ECZoneTrader.h  EndOfStreak.cpp  EndOfStreakTrader.cpp  ExtensionCompression.cpp  FollowTheStreak.cpp  HawkesVolatilityAlex.cpp  HelperStudies.cpp  MACDTradingStudies.cpp  MACD_MomentumSignalAlex.cpp  MACD_MomentumSignalAlexTrading.cpp  MomentumAfterStrikeAlex.cpp  MomentumAfterStrikeAlexRobust.cpp  MomentumAfterStrikeAlexRobustTrading.cpp  OpenStrategy.cpp  PriceEfficiency.cpp  PriceMap.h  README.md  ReversalCrossing.cpp  ScalperTrader.cpp  Scalping_Levels_Trader_ALEX.cpp  Studies.cpp  TradeManager.cpp  TradeManager.h  TradeWrapper.cpp  TradeWrapper.h  TrendAndEOSSignal.cpp  TrendlineBreakoutReverseAlex.cpp  TrendlineBreakoutTrader.cpp  TrendlineBreakoutTraderAlex.cpp  (+12 more)
